<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightPrimary"
        android:orientation="vertical">

        <View
            android:id="@+id/iv_background_header"
            android:layout_width="match_parent"
            android:layout_height="250dp"

            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginRight="128dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            tools:text="Inception"
            android:textColor="@color/textColor"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            tools:text="@string/original_title_scheme"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_original_title"
            android:layout_centerHorizontal="true"
            tools:text="@string/year_and_length_scheme"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:drawableRight="@drawable/ic_rating"
            android:gravity="center"
            android:layout_alignBottom="@+id/tv_genre"
            android:paddingLeft="4dp"
            tools:text="7.3"
            android:textColor="@color/textColor"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_budget"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            tools:text="@string/genre_schema"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_country"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            tools:text="@string/budget_schema"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_background_header"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/production_countries_schema"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <!-- image scroller? -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_background_header">

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_background_header"
                android:padding="16dp"
                android:scrollbars="vertical"
                tools:text="@string/story_schema"
                />
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
